feat: Change index from php to html, add todolist from API

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<?php
-
-?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,10 +7,11 @@
     <title>Document</title>
     <!-- axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js" integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- vue -->
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="./style.css">
+    <!-- vue -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
 </head>
 
 <body>
@@ -24,24 +22,21 @@
                 <div class="card">
                     <!-- lista degli item della todolist -->
                     <ul>
-                        <li class="item-card">ciao</li>
-                        <li class="item-card">ciao</li>
-                        <li class="item-card">ciao</li>
+                        <li v-for="(ToDoItem, index) in ToDoList" :key="index" class="item-card">{{ToDoItem.name}}</li>
                     </ul>
                     <div class="add-task">
-                        <input class="font-input" type="text" placeholder="Add Task">
-                        <button class="font-input" type="submit">Add</button>
+                        <input @keyup.enter="AddTask" v-model="NewTask" class="font-input" type="text" placeholder="Add Task">
+                        <button @click="AddTask" class="font-input" type="submit">Add</button>
                     </div>
 
 
                 </div>
             </div>
         </main>
-
-
     </div>
-
-    <script src="myscript.js"></script>
+    <script src="script.js"></script>
 </body>
+
+
 
 </html>
