feat: add delete task from the API by clicking the trash bin

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js" integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- css -->
-    <link rel="stylesheet" href="./style.css">
     <!-- vue -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- css -->
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
@@ -22,7 +24,10 @@
                 <div class="card">
                     <!-- lista degli item della todolist -->
                     <ul>
-                        <li v-for="(ToDoItem, index) in ToDoList" :key="index" class="item-card">{{ToDoItem.name}}</li>
+                        <li v-for="(ToDoItem, index) in ToDoList" :key="index" class="item-card">
+                            {{ToDoItem.name}} 
+                            <i @click="RemoveTask(index)" class="fa-solid fa-trash"></i>
+                        </li>
                     </ul>
                     <div class="add-task">
                         <input @keyup.enter="AddTask" v-model="NewTask" class="font-input" type="text" placeholder="Add Task">
